--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
   "scripts": {
     "start": "webpack serve --open",
     "createcomponent": "node utils/component.js --name",
-    "lint": "eslint . --ext .ts,.tsx,.js"
+    "prepare": "husky install",
+    "lint": "eslint 'src/**/*.{js,ts,tsx}' --quiet --fix",
+    "lint-staged": "lint-staged"
+  },
+  "lint-staged": {
+    "src/**/*.{js,ts,tsx}": [
+      "npm run lint",
+      "git add"
+    ]
   },
   "eslintConfig": {
     "env": {
@@ -34,6 +42,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.3",
