--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --open",
+    "build": "webpack --mode production",
     "createcomponent": "node utils/component.js --name",
     "prepare": "husky install",
     "lint": "eslint 'src/**/*.{js,ts,tsx}' --quiet --fix",
