--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --open",
+    "dev": "cross-env NODE_ENV=development webpack serve --open",
+    "server": "nodemon ./server/index.js",
+    "start": "npm run dev & npm run server",
     "build": "webpack --mode production",
     "createcomponent": "node utils/component.js --name",
     "prepare": "husky install",
     "lint": "eslint 'src/**/*.{js,ts,tsx}' --quiet --fix",
     "lint-staged": "lint-staged"
   },
+  "proxy": "http://localhost:5000/",
   "lint-staged": {
     "src/**/*.{js,ts,tsx}": [
       "npm run lint",
@@ -30,13 +33,15 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
     "@types/googlemaps": "^3.43.3",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.3.3",
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
     "babel-loader": "^9.1.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
@@ -45,15 +50,19 @@
     "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
+    "react-app-env": "^1.2.3",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.3",
     "typescript": "^5.1.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.88.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.1.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
