feat: add login buttons

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "npm run dev & npm run server",
     "build": "webpack --mode production",
     "deploy": "npx vercel deploy",
-    "createcomponent": "node utils/component.js --name",
+    "createcomponent": "node ./src/utils/component.js --name",
     "prepare": "husky install",
     "lint": "eslint 'src/**/*.{js,ts,tsx}' --quiet --fix",
     "lint-staged": "lint-staged"
